remove assets structure

--- a/beamerthemewilliams.sty
+++ b/beamerthemewilliams.sty
@@ -8,10 +8,10 @@
 \usetikzlibrary{positioning}
 
 % Settings
-\input{assets/beamerinnerthemewilliams.sty}
-\input{assets/beamerouterthemewilliams.sty}
-\input{assets/beamercolorthemewilliams.sty}
-\input{assets/beamerfontthemewilliams.sty}
+\input{beamerinnerthemewilliams.sty}
+\input{beamerouterthemewilliams.sty}
+\input{beamercolorthemewilliams.sty}
+\input{beamerfontthemewilliams.sty}
 
 \setbeamertemplate{navigation symbols}{}
 \setbeamertemplate{blocks}[rounded][shadow=false]  
